test/fail/Issue138.agda

module Issue138 where

mutual
  B = Set
  record Foo : Set where


